--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,12 @@ Authors@R:
     person("Hannah", "Sherrod", , "hannah@mooreplasticresearch.org", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Incorporating my functions from week 2 into a package.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    stringr
